# libstrophe

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGES.txt  COPYING  ChangeLog  Doxyfile  LICENSE.txt  Makefile.am  README.markdown  README.txt  SConstruct  TODO.txt  _clang-format  aclocal.m4  bootstrap.sh  build-android.sh  configure.ac  libstrophe.pc.in  libtool  names.txt  strophe.h  strophepp.h  testbuild.sh  xmpp.h
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-bug_report.md
.github/workflows/: main.yml
debian/: changelog  control  rules
examples/: README.md  active.c  basic.c  basic_logging.c  bot.c  complex.c  component.c  ext_auth.c  perf.c  register.c  roster.c  server.c  uuid.c  vcard.c
jni/: Android.mk  Application.mk
rpm/: README  libstrophe.spec
src/: auth.c  common.h  compression.c  compression_dummy.c  conn.c  crypto.c  ctx.c  deprecated.c  event.c  handler.c  hash.c  hash.h  jid.c  md5.c  md5.h  oocontext.cpp  oostanza.cpp  ostypes.h  parser.c  parser.h  parser_expat.c  parser_libxml2.c  rand.c  rand.h  resolver.c  resolver.h  sasl.c  sasl.h  scram.c  scram.h  server.c  sha.h  sha1.c  sha1.h  sha256.c  sha256.h  sha512.c  sha512.h  snprintf.c  snprintf.h  (+15 more)
tests/: cert.emptypass.pfx  cert.nopass.pfx  cert.pem  cert.pfx  check_parser.c  key.pem  key_encrypted.pem  res_query_dump.c  test.c  test.h  test_base64.c  test_ctx.c  test_fuzz_parser.c  test_fuzz_resolver.c  test_hash.c  test_jid.c  test_md5.c  test_rand.c  test_resolver.c  test_sasl.c  test_scram.c  test_send_queue.c  test_serialize_sm.c  test_sha1.c  test_sha256.c  test_sha512.c  test_snprintf.c  test_sock.c  test_stanza.c  test_string.c  test_xmppaddr.c
travis/: before_script.sh
vs2008/: active.vcproj  basic.vcproj  bot.vcproj  expat.vcproj  libstrophe.sln  libstrophe.vcproj  roster.vcproj
vs2012/: active.vcxproj  basic.vcxproj  bot.vcxproj  expat.vcxproj  libstrophe.sln  libstrophe.vcxproj  roster.vcxproj
